--- a/top.css
+++ b/top.css
@@ -18,13 +18,6 @@ nav {
 	color: white;
 }
 
-nav h2.logo {
-	color: black;
-	letter-spacing: 2px;
-	text-shadow: 0 0 2px white,
-	0 0 4px white;
-}
-
 form div.form {
 	width:350px;
 	margin:auto;
@@ -50,22 +43,6 @@ form div.contents {
 	box-shadow: 0 0 7px #cccccc;
 	background-color: rgba(255, 255, 255, 0.6);
 }
-.item_left {
-	display: table-cell;
-	text-align: left;
-}
-.item_center {
-	display: table-cell;
-	text-align: center;
-	font-family: sans-serif;
-}
-.item_right {
-	display: table-cell;
-	text-align: right;
-	width: 100px;
-	font-size: 20px;
-	padding-right: 5px;
-}
 .center {
 	text-align: center;
 	display: inline;
@@ -77,7 +54,7 @@ form div.contents {
 }
 
 form input {
-	border:1px solid #ccc; /*←各ブロックに枠線をつけてわかりやすくしました。*/
+	border:1px solid rgb(204, 204, 204);
 	border-radius: 5px 5px 5px 5px;
 }
 form input::placeholder{
