--- a/login.css
+++ b/login.css
@@ -5,7 +5,7 @@ html{
 	height: 100%;
 }
 body{
-	background-image: linear-gradient(0deg, #20069c, #72c2c8);
+	background-image: linear-gradient(0deg, #13006e, #72c2c8);
 	height: 100%;
 }
 a {
